# mzf.one

./: .env.example  .gitignore  Cargo.toml  entrypoint.sh  index.html  main.py  package.json  requirements.txt  tailwind.config.js  vite.config.js
db/: schema.sql  setup_db.sh
frontend/: App.jsx  index.html  index.jsx
src/: App.jsx  db.rs  main.css  main.rs
src/frontend/: App.jsx  curves.css  index.jsx  main.css
