[package]
name = "rust-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5"
serde = "1"
serde_json = "1"
sqlx = { version = "0.5.7", features = [ "runtime-async-std-native-tls", "sqlite" ] }
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4.14"
anyhow = "1.0.43"
rand = "0.8.4"
